feat: ship ModelHub 1.9.1 build 41
